--- a/package.json
+++ b/package.json
@@ -9,10 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "mathjs": "^11.8.2",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "^2.12.0",
+    "react-native-numeric-input": "^1.9.1",
+    "react-native-reanimated": "^3.3.0",
+    "react-native-safe-area-context": "^4.6.4",
+    "react-native-screens": "^3.22.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
