--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "expo": "~48.0.18",
+    "expo-sensors": "^12.3.0",
     "expo-status-bar": "~1.4.4",
     "mathjs": "^11.8.2",
     "react": "18.2.0",
@@ -24,6 +25,7 @@
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-screens": "^3.22.0",
+    "react-native-stopwatch-timer": "^0.0.21",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
   },
